--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,8 @@
         "tsx": "never"
       }
     ],
+    "react/jsx-curly-newline": "off",
+    "react/prop-types": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
